Opened 16 years ago

Closed 15 years ago

#3372 closed bug (fixed)

Incorrect Terminal numbering

Reported by: rossi Owned by: jackburton
Priority: normal Milestone: R1
Component: Applications/Terminal Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Terminal sometimes numbers the Terminal windows incorrectly.

Sofar I managed to reproduce this issue more or less reliable with the following steps:

  • open a bunch of Terminals from LaunchBox
  • randomly delete some of the terminals
  • open a bunch of terminals again

If the above doesn't show the issue, try again, but now use "Close All" from the deskbar menu.

If this still doesn't reproduce the issue, mix both flavours and just wildly create and delete terminals and inbetween close all.

This happens on hrev29005 (gcc2/gcc4 hybrid) build.

(This issue is not related to the closed ticket http://dev.haiku-os.org/ticket/699)

Change History (2)

comment:1 by axeld, 16 years ago

BTW, inside Trac, you should refer to other tickets by number, not via a link, this way, you get a nice tooltip with what that ticket is about, like #699.

comment:2 by stpere, 15 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev32422. It was an "off by one" error. Thank you!

Note: See TracTickets for help on using tickets.