_SanitizeIDs(): An off by one error was causing a bug in the terminal window numbering.

Ticket #3372.


git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@32422 a95241bf-73f2-0310-859d-f6bbb57e9c96